# WindowApiPackage

./: CMakeLists.txt  LICENSE  README.md  README_zh-CN.md
Src/Other/: ProgramPermissionsInfo.cc  ProgramPermissionsInfo.h
Src/WinReg/: WinRegUtil.cc  WinRegUtil.h
Src/WinSystemInfo/: WinSystemDisplayInfoUtil.cc  WinSystemDisplayInfoUtil.h  WinSystemMemoryStatusInfoUtil.cc  WinSystemMemoryStatusInfoUtil.h
Test/: CMakeLists.txt  tst_WinRegUtil.cc
Test/WinReg/: tst_WinRegUtil.cc
Test/WinSystemInfo/: CMakeLists.txt  tst_WinSystemInfoUtil.cc
